Bug #12221: Scrolling on To Be Reviewed Page Limited
Allow scrolling through the entire list, as well as all the video data, with
the single scrollbar on the right.

--- a/static/css/lights-on.css
+++ b/static/css/lights-on.css
@@ -1584,6 +1584,21 @@ width: 100%;
 clear: both;
 }
 
+#admin_leftpane {
+    width: 100%;
+    overflow: hidden;
+}
+
+#admin_rightpane {
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 590px;
+}
+
 .fields {
 padding: 2px 0 0 5px;
 }
